<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:orientation="vertical"
    tools:context=".DataInput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:hint="@string/namn"
            app:boxBackgroundColor="@color/banner_white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/efternamn"
            app:boxBackgroundColor="@color/banner_white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/allergi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/allergi"
        app:boxBackgroundColor="@color/banner_white"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:textCursorDrawable="@drawable/edit_text_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/comingButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_icons"
            android:text="Kommer"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/cantComeButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_icons"
            android:text="Kan inte komma"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>